syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo.model";

message BalanceCheckRequest {
  int64 account_Number = 1;
}

message BankBalance {
  int64 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (BankBalance);
}
